# llm-engineering

./: .gitignore  LICENSE  README.md  anthropic_interaction_examples.ipynb  cohere_interaction_examples.ipynb  deepseek_interaction_examples.ipynb  google_interaction_examples.ipynb  grok_interaction_examples.ipynb  groq_interaction_examples.ipynb  ollama_interaction_examples.ipynb  openai_interaction_examples.ipynb  perplexity_interaction_examples.ipynb  pyproject.toml  template_interaction_examples.ipynb
api_examples/ollama/: 01_sync_requests.py  02_sync_ollama_client.py  03_sync_openai_client.py  04_async_one.py  05_async_many.py  06_async_stream_one.py  07_async_stream_many.py  httpx_sdk_async_streaming.py  httpx_sdk_many_requests.py  httpx_sdk_single_request.py  ollama_sdk.py  openai_sdk.py  requests_sdk.py
minimal_examples/: anthropic_interaction_examples.ipynb  cohere_interaction_examples.ipynb  deepseek_interaction_examples.ipynb  google_interaction_examples.ipynb  grok_interaction_examples.ipynb  groq_interaction_examples.ipynb  ollama_interaction_examples.ipynb  openai_interaction_examples.ipynb  perplexity_interaction_examples.ipynb  pyproject.toml
