[project]
name = "llm-engineering"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "anthropic>=0.64.0",
    "beautifulsoup4>=4.13.4",
    "chromadb>=1.0.17",
    "datasets>=4.0.0",
    "feedparser>=6.0.11",
    "gensim>=4.3.3",
    "google-generativeai>=0.8.5",
    "gradio>=5.42.0",
    "ipywidgets==8.*",
    "jupyterlab==4.*",
    "langchain>=0.3.27",
    "langchain-chroma>=0.2.5",
    "langchain-community>=0.3.27",
    "langchain-core>=0.3.74",
    "langchain-openai>=0.3.30",
    "langchain-text-splitters>=0.3.9",
    "matplotlib>=3.10.5",
    "modal>=1.1.2",
    "numpy>=1.26.4",
    "ollama>=0.5.3",
    "openai>=1.99.9",
    "pandas>=2.3.1",
    "plotly>=6.3.0",
    "protobuf>=5.29.5",
    "psutil>=7.0.0",
    "pydub>=0.25.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.13.1",
    "sentence-transformers>=5.1.0",
    "speedtest-cli>=2.1.3",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
    "transformers>=4.55.2",
    "wandb>=0.21.1",
]
